[package]
name = "iost-cli"
version = "0.1.0"
authors = ["AtsushiMiyazaki <miyazaki@eversystem.co.jp>"]
edition = "2018"

[dependencies]
regex = "1"
iost-rpc = { path = "../rust-iost/rpc" }
iost-keys = { path = "../rust-iost/keys" }
iost-derive = { path = "../rust-iost/iost-derive" }
iost-chain = { path = "../rust-iost/chain" }
tokio = { version = "0.2.6", features = ["macros"] }
